# libconst

./: CMakeLists.txt  README  build.bat  compile.sh  consts.h  consts_math.h  consts_phys_mks.h  consts_prefix.h  math_const.h  phys_const.h  phys_const_mks.h  physicalConstants.c  release.ps1
src/: consts.c
test/: test1.c
